[tool.poetry]
name = "rfd"
version = "0.9.0"
description = "view RedFlagDeals.com from the command line"
authors = ["Dave Gallant <davegallant@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
beautifulsoup4 = ">=4.10.1"
click = ">=7.0"
colorama = ">=0.4.3"
requests = ">=2.22.0"
soupsieve = "<3.0"

[tool.poetry.dev-dependencies]
pre-commit = "2.1.1"
pylint = "^2.12.0"
pytest = ">=4.6.6"
rope = "1.1.1"

[tool.poetry.scripts]
rfd = "rfd.__main__:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
